--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "date-fns": "3.6.0",
     "draft-js": "0.11.7",
     "draftjs-to-html": "0.9.1",
-    "firebase": "10.12.1",
+    "firebase": "^10.12.1",
     "framer-motion": "11.2.10",
     "history": "5.3.0",
     "i18next": "23.11.5",
